[package]
name = "xgx_intern"
version = "0.4.0"
edition = "2024"
description = "A high-performance, Hash-based value interner with custom handle types."
keywords = ["interner", "interning", "internment", "deduplication", "hashing"]
categories = [
    "data-structures",
    "algorithms",
    "memory-management",
    "development-tools",
    "rust-patterns",
]
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/xgx_intern"
repository = "https://github.com/xangelix/xgx_intern"

[dependencies]
indexmap = "2"
thiserror = "2"

[dev-dependencies]
rustc-hash = "2"
ahash = "0.8"
